[package]
name = "tran"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
clap = "4.4.0"
dirs = "5.0.1"
rand = "0.8.5"
serde = { version = "1.0.186", features = ["derive"] }
toml = "0.7.6"
